--- a/webd/3.basic/layoutE-2.html
+++ b/webd/3.basic/layoutE-2.html
@@ -1,95 +1,116 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 E-2</title>
+    <title>E-2</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
+
         #wrap {
             width: 100%;
+            /* display: flex;
+            flex-wrap: wrap; */
         }
+
         #main {
             width: 100%;
             display: flex;
         }
-        #herder {
-            width: 200px;            
+
+        #header {
+            width: 200px;
         }
-        #herder .logo {
+
+        #header .logo {
             width: 100%;
             height: 100px;
-            background-color: #7a7777;
+            background-color: #e3e3e3;
         }
-        #herder .nav {
+
+        #header .nav {
             width: 100%;
             height: 650px;
-            background-color: #666464;
+            background-color: #efefef;
         }
+
         #contents {
             width: 400px;
-            height: 750px;
-            background-color: #a5a3a3;
+            display: flex;
+            flex-wrap: wrap;
         }
+
         #contents .notice {
             width: 100%;
             height: 300px;
-            background-color: #5a5757;
+            background-color: #d9d9d9;
         }
+
         #contents .gallery {
             width: 100%;
             height: 300px;
-            background-color: #a5a3a3;
+            background-color: #d3d3d3;
         }
+
         #contents .link {
             width: 100%;
             height: 150px;
-            background-color: #a5a3a3;
+            background-color: #dbdbdb;
         }
+
         #slider {
             width: calc(100% - 600px);
             height: 750px;
-            background-color: #b9b2b2;
+            background-color: #d9d9d9;
         }
+
         #footer {
             width: 100%;
             display: flex;
         }
+
         #footer .footer1 {
-            width: 20%;
+            width: 200px;
             height: 100px;
-            background-color: #a5a0a0;
+            background-color: #a3a3a3;
         }
+
         #footer .footer2 {
-            width: 60%;
+            width: calc(100% - 500px);
             height: 100px;
-            background-color: #a7a3a3;
+            background-color: #696969;
         }
+
         #footer .footer3 {
-            width: 20%;
+            width: 300px;
             height: 100px;
-            background-color: #969292;
+            background-color: #848484;
         }
     </style>
 </head>
+
 <body>
     <div id="wrap">
         <main id="main">
-            <herder id="herder">
+            <header id="header">
                 <h1 class="logo"></h1>
                 <nav class="nav"></nav>
-            </herder>
-            <!-- //herder -->
+            </header>
+            <!-- //header -->
             <section id="contents">
-                <div class="notice"></div>
-                <div class="gallery"></div>
-                <div class="link"></div>                
+                <aricle class="notice"></aricle>
+                <aricle class="gallery"></aricle>
+                <aricle class="link"></aricle>
             </section>
             <!-- //contents -->
-            <article id="slider"></article>
+            <article id="slider">
+
+            </article>
+            <!-- //slider -->
         </main>
         <footer id="footer">
             <div class="footer1"></div>
@@ -98,4 +119,5 @@
         </footer>
     </div>
 </body>
+
 </html>
