--- a/javascript/object01.html
+++ b/javascript/object01.html
@@ -2,72 +2,216 @@
 <html lang="ko">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>자바스크립트 :: 문자열 객체</title>
-
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/default.min.css">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>자바스크립트 :: 문자열 객체</title>
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/default.min.css">
 </head>
 
 <body>
-    <header id="header">
-        <h1>
-            <a href="index.html">javascript</a>
-        </h1>
-        <nav>
-            <ul>
-                <li><a href="javascript01.html">데이터 저장하기</a></li>
-                <li><a href="javascript02.html">데이터 불러오기</a></li>
-                <li><a href="javascript03.html">데이터 실행하기</a></li>
-                <li><a href="javascript04.html">데이터 제어하기</a></li>
-            </ul>
-            <ul>
-                <li class="active"><a href="object01.html">문자열 객체</a></li>
-                <li><a href="object02.html">배열 객체</a></li>
-                <li><a href="object03.html">수학 객체</a></li>
-                <li><a href="object04.html">숫자 객체</a></li>
-                <li><a href="object05.html">브라우저 객체</a></li>
-                <li><a href="object06.html">요소 객체</a></li>
-                <li><a href="object07.html">이벤트 객체</a></li>
-                <li><a href="test.html">연습</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!-- //header -->
+        <header id="header">
+                <h1>
+                        <a href="index.html">javascript</a>
+                </h1>
+                <nav>
+                        <ul>
+                                <li><a href="javascript01.html">데이터 저장하기</a></li>
+                                <li><a href="javascript02.html">데이터 불러오기</a></li>
+                                <li><a href="javascript03.html">데이터 실행하기</a></li>
+                                <li><a href="javascript04.html">데이터 제어하기</a></li>
+                        </ul>
+                        <ul>
+                                <li class="active"><a href="object01.html">문자열 객체</a></li>
+                                <li><a href="object02.html">배열 객체</a></li>
+                                <li><a href="object03.html">수학 객체</a></li>
+                                <li><a href="object04.html">숫자 객체</a></li>
+                                <li><a href="object05.html">브라우저 객체</a></li>
+                                <li><a href="object06.html">요소 객체</a></li>
+                                <li><a href="object07.html">이벤트 객체</a></li>
+                                <li><a href="test.html">연습</a></li>
+                        </ul>
+                </nav>
+        </header>
+        <!-- //header -->
 
-    <main id="main">
-        <div class="main__menu container">
-            <ul>
-                <li><a href="#">01. if문</a></li>
-            </ul>
-        </div>
-        <!-- //main__menu -->
+        <main id="main">
+                <div class="main__menu container">
+                        <ul>
+                                <li><a href="#sample01">01. <strong>.at()</strong> 메서드는 지정한 숫자(index)를 받아, 문자열에서 해당 되는
+                                                인덱스의 요소를 반환합니다.</a></li>
+                                <li><a href="#sample02">02. <strong>.charAt()</strong> 메서드는 지정한 숫자(index)를 받아, 문자열에서 해당
+                                                되는 인덱스의 단일문자를 반환합니다.</a></li>
+                                <li><a href="#sample03">03. <strong>.charCodeAt()</strong> 메서드는 지정한 숫자(index)를 받아, 문자열에서
+                                                해당 되는 인덱스의 유니코드 정수 값을 반환합니다.</a></li>
+                                <li><a href="#sample04">04. <strong>.codePointAt()</strong> 메서드는 지정한 숫자(index)를 받아,
+                                                문자열에서 해당 되는 인덱스의 유니코드 포인트 정수 값을 반환합니다.</a></li>
+                                <li><a href="#sample05">05. <strong>.concat()</strong> 메서드는 매개변수로 전달된 문자열을 받어, 결합된 새로운
+                                                문자열을 반환합니다.</a>
+                                </li>
+                                <li><a href="#sample06">06. <strong>.includes()</strong>:노란색_하트: 메서드는 문자열 포함 여부를 검색하여,
+                                                불린(true, false)을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample07">07. <strong>.indexOf()</strong>:노란색_하트: 메서드는 문자열을 검색하여, 주어진 값과
+                                                일치하는 첫 번째
+                                                위치값(index)을 반환합니다.</a></li>
+                                <li><a href="#sample08">08. <strong>.lastIndexOf()</strong> 메서드는 문자열을 역순으로 검색하여, 주어진 값과
+                                                일치하는 첫 번째
+                                                위치값(index)을 반환합니다.</a></li>
+                                <li><a href="#sample09">09. <strong>.localeCompare()</strong> 메서드는 문자열과 문자열을 비교하여,
+                                                수치(음수, 양수, 0)을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample10">10. <strong>.match()</strong>:노란색_하트: 메서드는 문자열(정규식)을 검색하고,
+                                                문자열(배열)을 반환합니다.</a>
+                                </li>
+                                <li><a href="#sample11">11. <strong>.matchAll()</strong> 메서드는 문자열(정규식)을 검색하고, 일치하는 모든
+                                                문자열(배열)을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample12">12. <strong>.normalize()</strong> 메서드는 주어진 문자열을 정규화된 형태로
+                                                반환합니다.</a></li>
+                                <li><a href="#sample13">13. <strong>.padEnd()</strong> 메서드는 주어진 길이에 맞게 뒤 문자열을 채우고, 새로운
+                                                문자열을 반환합니다.</a>
+                                </li>
+                                <li><a href="#sample14">14. <strong>.padStart()</strong> 메서드는 주어진 길이에 맞게 앞 문자열을 채우고, 새로운
+                                                문자열을 반환합니다.</a>
+                                </li>
+                                <li><a href="#sample15">15. <strong>.repeat()</strong> 메서드는 주어진 횟수만큼 반복 복사하여, 새로운 문자열을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample16">16. <strong>.replace()</strong> 메서드는 문자열에서 특정 문자열을 교체하여, 새로은
+                                                문자열을 반환합니다.</a>
+                                </li>
+                                <li><a href="#sample17">17. <strong>.replaceAll()</strong> 메서드는 문자열에서 특정 문자열을 모두 교체하여,
+                                                새로은 문자열을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample18">18. <strong>.search()</strong>:노란색_하트: 메서드는 문자열(정규식)을 검색하고,
+                                                위치값(숫자)을 반환합니다.</a>
+                                </li>
+                                <li><a href="#sample19">19. <strong>.slice()</strong>:노란색_하트::노란색_하트: 메서드는 문자열에서 시작 위치에서
+                                                종료 위치 값을 추출하여,
+                                                새로운 문자열을 반환합니다.</a></li>
+                                <li><a href="#sample20">20. <strong>.substring()</strong>:노란색_하트: 메서드는 문자열에서 시작 위치에서 종료
+                                                위치 값을 추출하여, 새로운
+                                                문자열을 반환합니다.</a></li>
+                                <li><a href="#sample21">21. <strong>.substr()</strong> 메서드는 문자열에서 시작 위치에서 길이 값을 추출하여,
+                                                새로운 문자열을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample22">22. <strong>.split()</strong>:노란색_하트::노란색_하트::노란색_하트: 메서드는 문자열을
+                                                구분자로 구분하고, 여러 개의
+                                                문자열(배열)을 반환합니다.</a></li>
+                                <li><a href="#sample23">23. <strong>.startsWith()</strong> 메서드는 시작하는 문자열에서 특정 문자열로 시작하는
+                                                확인하여, 그 결과를
+                                                불린(true, false)로 반환합니다.</a></li>
+                                <li><a href="#sample24">24. <strong>.endsWith()</strong> 메서드는 끝나는 문자열에서 특정 문자열로 끝나는지
+                                                확인하여, 그 결과를
+                                                불린(true, false)로 반환합니다.</a></li>
+                                <li><a href="#sample25">25. <strong>.toLocaleLowerCase()</strong> 메서드는 문자열을 소문자로 설정하고,
+                                                로케일 소문자 문자열을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample26">26. <strong>.toLocaleUpperCase()</strong> 메서드는 문자열을 대문자로 설정하고,
+                                                로케일 대문자 문자열을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample27">27. <strong>.toLowerCase()</strong> 메서드는 문자열을 소문자로 설정하고, 소문자
+                                                문자열을 반환합니다.</a>
+                                </li>
+                                <li><a href="#sample28">28. <strong>.toUpperCase()</strong> 메서드는 문자열을 대문자로 설정하고, 대문자
+                                                문자열을 반환합니다.</a>
+                                </li>
+                                <li><a href="#sample29">29. <strong>.toString()</strong> 메서드는 데이터를 문자열로 변환하고, 문자열을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample30">30. <strong>.trim()</strong>:노란색_하트: 메서드는 문자열의 앞/뒤 공백을 제거하고, 새로운
+                                                문자열을 반환합니다.</a>
+                                </li>
+                                <li><a href="#sample31">31. <strong>.trimEnd()</strong> 메서드는 문자열의 뒤 공백을 제거하고, 새로운 문자열을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample32">32. <strong>.trimStart()</strong> 메서드는 문자열의 앞 공백을 제거하고, 새로운 문자열을
+                                                반환합니다.</a></li>
+                                <li><a href="#sample33">33. <strong>.valueOf()</strong> 메서드는 객체의 원시값을 반환합니다.</a></li>
+                        </ul>
+                </div>
+                <!-- //main__menu -->
 
-        <div class="main__sample container">
-            <div id="sample01" class="sample">
-                <h3>01. 변수 : 데이터 저장</h3>
-                <p>
-                    자바스크립트에서 변수는 값을 저정하고 참조하는데 사용합니다.
-                    변수를 사용하면 데이터를 저장하고 나중에 해당 데이터를 재사용 할 수 있습니다.
-                </p>
-                <pre><code>{
-
+                <div class="main__sample container">
+                        <div id="sample01" class="sample">
+                                <h3>01. .at()메서드</h3>
+                                <p class="notice">"문자열".at(위치값)</p>
+                                <ul>
+                                        <li>지정한 숫자를 받아, 문자열에서 해당되는 인덱스의 요소를 반환합니다.</li>
+                                        <li>대소문자를 구별합니다.</li>
+                                        <li>문자열의 길이보다 큰 인덱스를 지정하면 undifined를 반환합니다.</li>
+                                        <li>음수인 경우 문자열의 오른쪽에서부터 인덱스를 셉니다.</li>
+                                </ul>
+                                <pre><code>{                   
+        "javascript reference".at()      
+        "javascript reference".at(0)     
+        "javascript reference".at(1)      
+        "javascript reference".at(2)    
+        "javascript reference".at(-1)    
+        "javascript reference".at(-2)   
+        "javascript reference".at(100)                    
 }</code></pre>
-            </div>
-            <!-- //sample01 -->
-        </div>
-        <!-- //main__sample -->
-    </main>
-    <!-- //main -->
+                                <div class="result">
+                                        <details>
+                                                <summary>결과 확인하기</summary>
+                                                <div>
+                                                        'j'<br>
+                                                        'j'<br>
+                                                        'a'<br>
+                                                        'v'<br>
+                                                        'e'<br>
+                                                        'c'<br>
+                                                        undefined<br>
+                                                </div>
+                                        </details>
+                                </div>
+                        </div>
+                        <!-- //sample01 -->
 
-    <footer id="footer">
+                        <div id="sample02" class="sample">
+                                <h3>02. .charAt()메서드</h3>
+                                <p class="notice">"문자열".charAt(위치값)</p>
+                                <ul>
+                                        <li>문자열에서 특정 인덱스에 해당하는 문자를 반환합니다.</li>
+                                        <li>문자열의 인덱스가 0부터 시작하며, 해당 인덱스가 문자열의 길이를 벗어나거나 음수인 경우 빈 문자열을 반환합니다.</li>
+                                        <li>문자열을 다룰 때 특정 위치의 문자를 확인하는 데 사용됩니다.</li>
+                                </ul>
+                                <pre><code>{ 
+        "javascript reference".charAt()      
+        "javascript reference".charAt(0)     
+        "javascript reference".charAt(1)      
+        "javascript reference".charAt(2)    
+        "javascript reference".charAt(-1)    
+        "javascript reference".charAt(-2)   
+        "javascript reference".charAt(100)                                   
+}</code></pre>
+                                <div class="result">
+                                        <details>
+                                                <summary>결과 확인하기</summary>
+                                                <div>
+                                                        'j'<br>
+                                                        'j'<br>
+                                                        'a'<br>
+                                                        'v'<br>
+                                                        'e'<br>
+                                                        'c'<br>
+                                                        ' '<br>
+                                                </div>
+                                        </details>
+                                </div>
+                        </div>
+                        <!-- //sample02 -->
+                </div>
+                <!-- //main__sample -->
+        </main>
+        <!-- //main -->
 
-    </footer>
-    <!-- //footer -->
+        <footer id="footer">
 
-    <script src="assets/js/highlight.min.js"></script>
-    <script>hljs.highlightAll();</script>
+        </footer>
+        <!-- //footer -->
+
+        <script src="assets/js/highlight.min.js"></script>
+        <script>hljs.highlightAll();</script>
+
 </body>
 
 </html>
