--- a/webd/1menu/menu-1.html
+++ b/webd/1menu/menu-1.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 메뉴 M-1</title>
+    <title>M-1</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
@@ -97,6 +96,7 @@
         }
 
         /* nav */
+
         .nav>ul {
             display: flex;
             justify-content: right;
@@ -114,36 +114,35 @@
         }
 
         .nav>ul>li>a:hover {
-            background-color: #696969;
+            background-color: #848484;
         }
 
         .nav>ul>li>ul {
+            display: none;
             position: absolute;
             left: 0;
-            top: 38px;
+            top: 39px;
             background-color: #c7c7c7;
             width: 100%;
             text-align: center;
-            display: none;
         }
 
         .nav>ul>li>ul>li>a {
             display: inline-block;
             padding: 10px;
-            background-color: #c1c1c1;
+            background-color: #ababab;
             width: 100%;
             box-sizing: border-box;
         }
 
         .nav>ul>li>ul>li>a:hover {
-            background-color: #8f8f8f;
+            background-color: #848484;
         }
 
         /* 자바스크립트용 CSS */
         .nav>ul>li>ul {
             display: block;
             height: 0;
-            /* height: 155px; */
             overflow: hidden;
             transition: all 600ms;
         }
@@ -158,34 +157,34 @@
                 <ul>
                     <li><a href="#">메뉴1</a>
                         <ul class="submenu">
-                            <li><a href="#">서브메뉴1-1</a></li>
-                            <li><a href="#">서브메뉴1-2</a></li>
-                            <li><a href="#">서브메뉴1-3</a></li>
-                            <li><a href="#">서브메뉴1-4</a></li>
+                            <li><a href="#">메뉴1-1</a></li>
+                            <li><a href="#">메뉴1-2</a></li>
+                            <li><a href="#">메뉴1-3</a></li>
+                            <li><a href="#">메뉴1-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">메뉴2</a>
                         <ul class="submenu">
-                            <li><a href="#">서브메뉴2-1</a></li>
-                            <li><a href="#">서브메뉴2-2</a></li>
-                            <li><a href="#">서브메뉴2-3</a></li>
-                            <li><a href="#">서브메뉴2-4</a></li>
+                            <li><a href="#">메뉴2-1</a></li>
+                            <li><a href="#">메뉴2-2</a></li>
+                            <li><a href="#">메뉴2-3</a></li>
+                            <li><a href="#">메뉴2-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">메뉴3</a>
                         <ul class="submenu">
-                            <li><a href="#">서브메뉴3-1</a></li>
-                            <li><a href="#">서브메뉴3-2</a></li>
-                            <li><a href="#">서브메뉴3-3</a></li>
-                            <li><a href="#">서브메뉴3-4</a></li>
+                            <li><a href="#">메뉴3-1</a></li>
+                            <li><a href="#">메뉴3-2</a></li>
+                            <li><a href="#">메뉴3-3</a></li>
+                            <li><a href="#">메뉴3-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">메뉴4</a>
                         <ul class="submenu">
-                            <li><a href="#">서브메뉴4-1</a></li>
-                            <li><a href="#">서브메뉴4-2</a></li>
-                            <li><a href="#">서브메뉴4-3</a></li>
-                            <li><a href="#">서브메뉴4-4</a></li>
+                            <li><a href="#">메뉴4-1</a></li>
+                            <li><a href="#">메뉴4-2</a></li>
+                            <li><a href="#">메뉴4-3</a></li>
+                            <li><a href="#">메뉴4-4</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -212,33 +211,35 @@
         <!-- //footer -->
     </div>
     <!-- //wrap -->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- <script>
-        $(function(){
-            $(".nav > ul > li").mouseover(function(){
-                $(this).find(".submenu").stop().slideDown();
-            });
-            $(".nav > ul > li").mouseout(function(){
-                $(this).find(".submenu").stop().slideUp();
-            });
-        });
-    </script> -->
     <script>
+        // jquery용
+        // $(function () {
+        //     $(".nav>ul>li").mouseover(function () {  //메뉴에 오버했을 때 서브메뉴를 보여줘라!
+        //         // console.log("dd")
+        //         $(this).find(".submenu").stop().slideDown();   //내가 오버한 것을 알고 싶을 때
+        //     });
+        //     $(".nav>ul>li").mouseout(function () {
+        //         $(this).find(".submenu").stop().slideUp();
+        //     });
+        // });
+    </script>
+    <script>
+        // javascript용 
         window.onload = function () {
-            let navList = document.querySelectorAll(".nav > ul > li");
-
-            navList.forEach(function (navItem) {
-                navItem.addEventListener("mouseover", function () {
-                    this.querySelector(".submenu").style.height = "155px";
+            let navList = document.querySelectorAll(".nav>ul>li");
+            //console.log(navList) 원하는데이터를 변수에 저장한걸 확인
+            navList.forEach(function (navItem) {  //navList가 여러개일 경우 forEach 메서드를 사용 후 실행(한문장), navList 4개를 navItem으로 지정
+                navItem.addEventListener("mouseover", function () {  //navItem에 마우스오버 했을 때 실행시켜라!
+                    this.querySelector(".submenu").style.height = "155px"; //내가 오버한 것을 알고 싶을 때
                 });
             });
             navList.forEach(function (navItem) {
                 navItem.addEventListener("mouseout", function () {
-                    this.querySelector(".submenu").style.height = "0px";
+                    this.querySelector(".submenu").style.height = "0";
                 });
             });
-        }
+        };
     </script>
 </body>
 
