--- a/webd/1menu/menu-2.html
+++ b/webd/1menu/menu-2.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 메뉴 M-2</title>
+    <title>Document</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
@@ -118,18 +117,18 @@
         }
 
         .nav>ul>li>ul {
+            display: none;
             position: absolute;
             left: 0;
             top: 38px;
             width: 100%;
             text-align: center;
-            display: none;
         }
 
         .nav>ul>li>ul>li>a {
-            display: inline-block;
-            padding: 10px;
             background-color: #c1c1c1;
+            padding: 10px;
+            display: inline-block;
             width: 100%;
             box-sizing: border-box;
         }
@@ -149,101 +148,97 @@
 </head>
 
 <body>
-
-    <body>
-        <div id="wrap">
-            <div id="header">
-                <div class="logo"></div>
-                <nav class="nav">
-                    <ul>
-                        <li>
-                            <a href="#">메뉴1</a>
-                            <ul class="submenu">
-                                <li><a href="#">서브메뉴1-1</a></li>
-                                <li><a href="#">서브메뉴1-2</a></li>
-                                <li><a href="#">서브메뉴1-3</a></li>
-                                <li><a href="#">서브메뉴1-4</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">메뉴2</a>
-                            <ul class="submenu">
-                                <li><a href="#">서브메뉴2-1</a></li>
-                                <li><a href="#">서브메뉴2-2</a></li>
-                                <li><a href="#">서브메뉴2-3</a></li>
-                                <li><a href="#">서브메뉴2-4</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">메뉴3</a>
-                            <ul class="submenu">
-                                <li><a href="#">서브메뉴3-1</a></li>
-                                <li><a href="#">서브메뉴3-2</a></li>
-                                <li><a href="#">서브메뉴3-3</a></li>
-                                <li><a href="#">서브메뉴3-4</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">메뉴4</a>
-                            <ul class="submenu">
-                                <li><a href="#">서브메뉴4-1</a></li>
-                                <li><a href="#">서브메뉴4-2</a></li>
-                                <li><a href="#">서브메뉴4-3</a></li>
-                                <li><a href="#">서브메뉴4-4</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <!-- //header -->
-
-            <div id="slider">
-            </div>
-            <!-- //slider -->
-
-            <div id="contents">
-                <div class="content1"></div>
-                <div class="content2"></div>
-                <div class="content3"></div>
-            </div>
-            <!-- //contents -->
-
-            <div id="footer">
-                <div class="footer1"></div>
-                <div class="footer2"></div>
-                <div class="footer3"></div>
-            </div>
-            <!-- //footer -->
+    <div id="wrap">
+        <div id="header">
+            <div class="logo"></div>
+            <nav class="nav">
+                <ul>
+                    <li>
+                        <a href="#">메뉴1</a>
+                        <ul class="submenu">
+                            <li><a href="#">서브메뉴1-1</a></li>
+                            <li><a href="#">서브메뉴1-2</a></li>
+                            <li><a href="#">서브메뉴1-3</a></li>
+                            <li><a href="#">서브메뉴1-4</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">메뉴2</a>
+                        <ul class="submenu">
+                            <li><a href="#">서브메뉴2-1</a></li>
+                            <li><a href="#">서브메뉴2-2</a></li>
+                            <li><a href="#">서브메뉴2-3</a></li>
+                            <li><a href="#">서브메뉴2-4</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">메뉴3</a>
+                        <ul class="submenu">
+                            <li><a href="#">서브메뉴3-1</a></li>
+                            <li><a href="#">서브메뉴3-2</a></li>
+                            <li><a href="#">서브메뉴3-3</a></li>
+                            <li><a href="#">서브메뉴3-4</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">메뉴4</a>
+                        <ul class="submenu">
+                            <li><a href="#">서브메뉴4-1</a></li>
+                            <li><a href="#">서브메뉴4-2</a></li>
+                            <li><a href="#">서브메뉴4-3</a></li>
+                            <li><a href="#">서브메뉴4-4</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <!-- //wrap -->
-    </body>
+        <!-- //header -->
 
+        <div id="slider">
+        </div>
+        <!-- //slider -->
+
+        <div id="contents">
+            <div class="content1"></div>
+            <div class="content2"></div>
+            <div class="content3"></div>
+        </div>
+        <!-- //contents -->
+
+        <div id="footer">
+            <div class="footer1"></div>
+            <div class="footer2"></div>
+            <div class="footer3"></div>
+        </div>
+        <!-- //footer -->
+    </div>
+    <!-- //wrap -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- <script>
-        $(function(){
-            $(".nav > ul > li").mouseover(function(){
-                $(".nav > ul > li > ul").stop().slideDown();
-            });
-            $(".nav > ul > li").mouseout(function(){
-                $(".nav > ul > li > ul").stop().slideUp();
-            });
-        });
-    </script> -->
+    <script>
+        // $(function () {
+        //     $(".nav>ul>li").mouseover(function () {
+        //         $(".nav>ul>li>ul").stop().slideDown();  //서브메뉴를 한꺼번에 보여줘라!
+        //     });
+        //     $(".nav>ul>li").mouseout(function () {
+        //         $(".nav>ul>li>ul").stop().slideUp();
+        //     });
+        // });
+    </script>
     <script>
         window.onload = function () {
-            let navList = document.querySelector(".nav > ul");
-
+            let navList = document.querySelector(".nav>ul");
+            console.log(navList)
             navList.addEventListener("mouseover", function () {
-                navList.querySelectorAll(".submenu").forEach(sub => {
-                    sub.style.height = "155px";
+                navList.querySelectorAll(".submenu").forEach(submenu => {
+                    submenu.style.height = "155px";
                 });
             });
             navList.addEventListener("mouseout", function () {
                 navList.querySelectorAll(".submenu").forEach(sub => {
-                    sub.style.height = "0px";
+                    sub.style.height = "0";
                 });
             });
-        }
+        };
     </script>
 </body>
 
