--- a/webd/1menu/menu-3.html
+++ b/webd/1menu/menu-3.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 메뉴 M-3</title>
+    <title>M-3</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
@@ -102,19 +101,14 @@
         }
 
         #header::after {
-            content: '';
+            content: '가상';
             width: 100%;
-            height: 0px;
+            height: 200px;
             background-color: #808080;
             position: absolute;
             left: 0;
             top: 100px;
             z-index: 1;
-            transition: all 400ms;
-        }
-
-        #header.on::after {
-            height: 155px;
         }
 
         .nav {
@@ -124,7 +118,7 @@
         .nav>ul {
             display: flex;
             justify-content: right;
-            margin-top: 61px;
+            margin-top: 62px;
         }
 
         .nav>ul>li {
@@ -132,145 +126,106 @@
         }
 
         .nav>ul>li>a {
-            display: inline-block;
-            padding: 10px 50px;
             background-color: #b0b0b0;
+            padding: 10px 50px;
+            display: inline-block;
         }
 
         .nav>ul>li>a:hover {
-            background-color: #696969;
+            background-color: #848484;
         }
 
         .nav>ul>li>ul {
+            /* display: none; */
             position: absolute;
             left: 0;
-            top: 39px;
+            top: 38px;
             width: 100%;
             text-align: center;
-            display: none;
         }
 
+        .nav>ul>li>ul>li {}
+
         .nav>ul>li>ul>li>a {
-            display: inline-block;
+            background-color: #c1c1c1;
             padding: 10px;
+            display: inline-block;
             width: 100%;
             box-sizing: border-box;
         }
 
         .nav>ul>li>ul>li>a:hover {
-            background-color: #8f8f8f;
-        }
-
-        /* 자바스크립트용 CSS */
-        .nav>ul>li>ul {
-            display: block;
-            height: 0;
-            overflow: hidden;
-            transition: all 400ms;
+            background-color: #848484;
         }
     </style>
 </head>
 
 <body>
-
-    <body>
-        <div id="wrap">
-            <div id="header">
-                <div class="logo"></div>
-                <nav class="nav">
-                    <ul>
-                        <li>
-                            <a href="#">메뉴1</a>
-                            <ul class="submenu">
-                                <li><a href="#">서브메뉴1-1</a></li>
-                                <li><a href="#">서브메뉴1-2</a></li>
-                                <li><a href="#">서브메뉴1-3</a></li>
-                                <li><a href="#">서브메뉴1-4</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">메뉴2</a>
-                            <ul class="submenu">
-                                <li><a href="#">서브메뉴2-1</a></li>
-                                <li><a href="#">서브메뉴2-2</a></li>
-                                <li><a href="#">서브메뉴2-3</a></li>
-                                <li><a href="#">서브메뉴2-4</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">메뉴3</a>
-                            <ul class="submenu">
-                                <li><a href="#">서브메뉴3-1</a></li>
-                                <li><a href="#">서브메뉴3-2</a></li>
-                                <li><a href="#">서브메뉴3-3</a></li>
-                                <li><a href="#">서브메뉴3-4</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">메뉴4</a>
-                            <ul class="submenu">
-                                <li><a href="#">서브메뉴4-1</a></li>
-                                <li><a href="#">서브메뉴4-2</a></li>
-                                <li><a href="#">서브메뉴4-3</a></li>
-                                <li><a href="#">서브메뉴4-4</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-            <!-- //header -->
-
-            <div id="slider">
-            </div>
-            <!-- //slider -->
-
-            <div id="contents">
-                <div class="content1"></div>
-                <div class="content2"></div>
-                <div class="content3"></div>
-            </div>
-            <!-- //contents -->
-
-            <div id="footer">
-                <div class="footer1"></div>
-                <div class="footer2"></div>
-                <div class="footer3"></div>
-            </div>
-            <!-- //footer -->
+    <div id="wrap">
+        <div id="header">
+            <div class="logo"></div>
+            <nav class="nav">
+                <ul>
+                    <li>
+                        <a href="#">메뉴1</a>
+                        <ul class="submenu">
+                            <li><a href="#">서브메뉴1-1</a></li>
+                            <li><a href="#">서브메뉴1-2</a></li>
+                            <li><a href="#">서브메뉴1-3</a></li>
+                            <li><a href="#">서브메뉴1-4</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">메뉴2</a>
+                        <ul class="submenu">
+                            <li><a href="#">서브메뉴2-1</a></li>
+                            <li><a href="#">서브메뉴2-2</a></li>
+                            <li><a href="#">서브메뉴2-3</a></li>
+                            <li><a href="#">서브메뉴2-4</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">메뉴3</a>
+                        <ul class="submenu">
+                            <li><a href="#">서브메뉴3-1</a></li>
+                            <li><a href="#">서브메뉴3-2</a></li>
+                            <li><a href="#">서브메뉴3-3</a></li>
+                            <li><a href="#">서브메뉴3-4</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">메뉴4</a>
+                        <ul class="submenu">
+                            <li><a href="#">서브메뉴4-1</a></li>
+                            <li><a href="#">서브메뉴4-2</a></li>
+                            <li><a href="#">서브메뉴4-3</a></li>
+                            <li><a href="#">서브메뉴4-4</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <!-- //wrap -->
-    </body>
+        <!-- //header -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>
-        // $(function(){
-        //     $(".nav > ul > li").mouseover(function(){
-        //         $(".nav > ul > li > ul").stop().fadeIn(900);
-        //         $("#header").addClass("on");
-        //     });
-        //     $(".nav > ul > li").mouseout(function(){
-        //         $(".nav > ul > li > ul").stop().fadeOut(100);
-        //         $("#header").removeClass("on");
-        //     });
-        // });
-    </script>
-    <script>
-        let navList = document.querySelector(".nav > ul");
+        <div id="slider">
+        </div>
+        <!-- //slider -->
 
-        navList.addEventListener("mouseover", () => {
-            navList.querySelectorAll(".submenu").forEach(sub => {
-                sub.style.height = "155px";
-            });
-            document.getElementById("header").classList.add("on");
-        });
+        <div id="contents">
+            <div class="content1"></div>
+            <div class="content2"></div>
+            <div class="content3"></div>
+        </div>
+        <!-- //contents -->
 
-        navList.addEventListener("mouseout", () => {
-            navList.querySelectorAll(".submenu").forEach(sub => {
-                sub.style.height = "0px";
-            });
-            document.getElementById("header").classList.remove("on");
-        });
-    </script>
+        <div id="footer">
+            <div class="footer1"></div>
+            <div class="footer2"></div>
+            <div class="footer3"></div>
+        </div>
+        <!-- //footer -->
+    </div>
+    <!-- //wrap -->
 </body>
 
 </html>
