--- a/webd/3.basic/layoutC-2.html
+++ b/webd/3.basic/layoutC-2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 C-2</title>
+    <title>C-2</title>
     <style>
         * {
             margin: 0;
@@ -20,16 +20,16 @@
             width: 20%;
         }
 
-        #h1 {
+        #aside .logo {
             width: 100%;
             height: 100px;
-            background-color: #e1e1e1;
+            background-color: red;
         }
 
-        #nav {
+        #aside .nav {
             width: 100%;
             height: 550px;
-            background-color: #dbdbdb;
+            background-color: #d9d9d9;
         }
 
         #main {
@@ -39,7 +39,7 @@
         #slider {
             width: 100%;
             height: 350px;
-            background-color: #c7c7c7;
+            background-color: #d3d3d3;
         }
 
         #contents {
@@ -50,19 +50,19 @@
         #contents .content1 {
             width: 33.3333%;
             height: 200px;
-            background-color: #c9c9c9;
+            background-color: #c7c7c7;
         }
 
         #contents .content2 {
             width: 33.3333%;
             height: 200px;
-            background-color: #cdcdcd;
+            background-color: #cbcbcb;
         }
 
         #contents .content3 {
             width: 33.3333%;
             height: 200px;
-            background-color: #cbcbcb;
+            background-color: #b9b9b9;
         }
 
         #footer {
@@ -73,23 +73,25 @@
         #footer .footer1 {
             width: 80%;
             height: 100px;
-            background-color: #b9b9b9;
+            background-color: #a3a3a3;
         }
 
         #footer .footer2 {
             width: 20%;
+            height: 100px;
+            background-color: #a7a7a7;
         }
 
         #footer .footer2 .footer2-1 {
             width: 100%;
             height: 50px;
-            background-color: #b1b1b1;
+            background-color: #a7a7a7;
         }
 
         #footer .footer2 .footer2-2 {
             width: 100%;
             height: 50px;
-            background-color: #a3a3a3;
+            background-color: #ababab;
         }
     </style>
 </head>
@@ -97,23 +99,17 @@
 <body>
     <div id="wrap">
         <aside id="aside">
-            <h1 id="h1"></h1>
-            <nav id="nav"></nav>
+            <h1 class="logo"></h1>
+            <nav class="nav"></nav>
         </aside>
         <!-- //aside -->
-
         <main id="main">
-            <article id="slider">
-            </article>
-            <!-- //slider -->
-
+            <article id="slider"></article>
             <section id="contents">
-                <section class="content1"></section>
-                <section class="content2"></section>
-                <section class="content3"></section>
+                <div class="content1"></div>
+                <div class="content2"></div>
+                <div class="content3"></div>
             </section>
-            <!-- //contents -->
-
             <footer id="footer">
                 <div class="footer1"></div>
                 <div class="footer2">
@@ -121,7 +117,6 @@
                     <div class="footer2-2"></div>
                 </div>
             </footer>
-            <!-- //footer -->
         </main>
         <!-- //main -->
     </div>
