--- a/webd/3.basic/layoutD-1.html
+++ b/webd/3.basic/layoutD-1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 D-1</title>
+    <title>D-1</title>
     <style>
         * {
             margin: 0;
@@ -19,47 +19,56 @@
 
         #aside {
             width: 200px;
-            height: 850px;
-            background-color: #efefef;
+            height: 950px;
+            background-color: #d9d9d9;
         }
 
         #aside .logo {
             width: 100%;
             height: 100px;
-            background-color: #efefef;
+            background-color: #d9d9d9;
         }
 
         #aside .nav {
             width: 100%;
-            height: 750px;
-            background-color: #e7e7e7;
+            height: 850px;
+            background-color: #dbdbdb;
         }
-
 
         #main {
             width: calc(100% - 200px);
-            height: 850px;
-            background-color: #e3e3e3;
+            height: 950px;
+            background-color: #c7c7c7;
         }
 
-        #main .slider {
+        #slider {
             width: 100%;
             height: 400px;
-            background-color: #e3e3e3;
+            background-color: #c7c7c7;
+            position: relative;
+            /*앱솔루트의 기준점*/
         }
 
-        #main .slider .link {}
+        #slider .link {
+            position: absolute;
+            /*내 마음대로 위치정하고 싶을 때*/
+            right: 0;
+            top: 0;
+            background-color: red;
+            /* width: 100px;
+            height: 300px; */
+        }
 
-        #main .banner {
+        #banner {
             width: 100%;
             height: 200px;
-            background-color: #e7e7e7;
+            background-color: #cbcbcb;
         }
 
-        #main .contents {
+        #contents {
             width: 100%;
             height: 250px;
-            background-color: #e5e5e5;
+            background-color: #b9b9b9;
         }
 
         #footer {
@@ -68,21 +77,21 @@
         }
 
         #footer .footer1 {
-            width: 20%;
+            width: 200px;
             height: 100px;
-            background-color: #d9d9d9;
+            background-color: #b1b1b1;
         }
 
         #footer .footer2 {
-            width: 60%;
+            width: calc(100% - 500px);
             height: 100px;
-            background-color: #d7d7d7;
+            background-color: #acacac;
         }
 
         #footer .footer3 {
-            width: 20%;
+            width: 300px;
             height: 100px;
-            background-color: #d1d1d1;
+            background-color: #a3a3a3;
         }
     </style>
 </head>
@@ -93,19 +102,27 @@
             <h1 class="logo"></h1>
             <nav class="nav"></nav>
         </aside>
+        <!-- //aside -->
         <main id="main">
-            <article class="slider">
+            <article id="slider">
                 <div class="link"></div>
             </article>
-            <article class="banner"></article>
-            <section class="contents"></section>
+            <!-- //slider -->
+            <article id="banner">
+            </article>
+            <!-- //banner -->
+            <section id="contents">
+            </section>
+            <!-- //contents -->
         </main>
         <footer id="footer">
             <div class="footer1"></div>
             <div class="footer2"></div>
             <div class="footer3"></div>
         </footer>
+        <!-- //footer -->
     </div>
+    <!-- //wrap -->
 </body>
 
 </html>
