--- a/webd/3.basic/layoutD-2.html
+++ b/webd/3.basic/layoutD-2.html
@@ -14,7 +14,10 @@
         #wrap {
             width: 100%;
             display: flex;
+            /*가로정렬*/
             flex-wrap: wrap;
+            /*플랙스후 위드값을 제대로 넣어주기 위해 플랙스로 감싼부분을 크기에 맞게 랩으로 처리*/
+
         }
 
         #aside {
@@ -24,7 +27,7 @@
         #aside .logo {
             width: 100%;
             height: 100px;
-            background-color: #eee;
+            background-color: #efefef;
         }
 
         #aside .nav {
@@ -36,7 +39,7 @@
         #main {
             width: calc(100% - 200px);
             height: 650px;
-            background-color: #ddd;
+            background-color: #e3e3e3;
         }
 
         #slider {
@@ -53,7 +56,7 @@
         #slider .banner {
             width: 230px;
             height: 400px;
-            background-color: red
+            background-color: #d1d1d1;
         }
 
         #contents {
@@ -64,13 +67,13 @@
         #contents .content1 {
             width: 50%;
             height: 250px;
-            background-color: #cdcdcd;
+            background-color: #c7c7c7;
         }
 
         #contents .content2 {
             width: 50%;
             height: 250px;
-            background-color: #c3c3c3;
+            background-color: #cbcbcb;
         }
 
         #footer {
@@ -79,21 +82,21 @@
         }
 
         #footer .footer1 {
-            width: 20%;
+            width: 200px;
             height: 100px;
             background-color: #b1b1b1;
         }
 
         #footer .footer2 {
-            width: 60%;
+            width: calc(100% - 430px);
             height: 100px;
-            background-color: #b3b3b3;
+            background-color: #a9a9a9;
         }
 
         #footer .footer3 {
-            width: 20%;
+            width: 230px;
             height: 100px;
-            background-color: #b9b9b9;
+            background-color: #a3a3a3;
         }
     </style>
 </head>
@@ -105,7 +108,6 @@
             <nav class="nav"></nav>
         </aside>
         <!-- //aside -->
-
         <main id="main">
             <article id="slider">
                 <div class="image"></div>
@@ -116,6 +118,7 @@
                 <div class="content1"></div>
                 <div class="content2"></div>
             </section>
+            <!-- //contents -->
         </main>
         <footer id="footer">
             <div class="footer1"></div>
