--- a/webd/3.basic/layoutD-3.html
+++ b/webd/3.basic/layoutD-3.html
@@ -20,55 +20,51 @@
         #aside {
             width: 200px;
             height: 850px;
-            background-color: #eee;
+            background-color: #efefef;
         }
 
         #aside .logo {
             width: 100%;
             height: 100px;
-            background-color: #eee;
-
+            background-color: #efefef;
         }
 
         #aside .nav {
             width: 100%;
             height: 750px;
-            background-color: #d9d9d9;
-
+            background-color: #efefef;
         }
 
         #main {
             width: calc(100% - 200px);
-            height: 850px;
-            background-color: #ddd;
         }
 
         #slider {
             width: 100%;
             height: 400px;
-            background-color: #ddd;
+            background-color: #d9d9d9;
             position: relative;
         }
 
         #slider .link {
-            width: 100px;
-            height: 300px;
-            background-color: red;
             position: absolute;
             right: 0;
             top: 0;
+            width: 100px;
+            height: 300px;
+            background-color: red;
         }
 
         #banner {
             width: 100%;
             height: 200px;
-            background-color: #d7d7d7;
+            background-color: #c7c7c7;
         }
 
         #contents {
             width: 100%;
             height: 250px;
-            background-color: #dbdbdb;
+            background-color: #cbcbcb;
         }
 
         #footer {
@@ -78,26 +74,14 @@
 
         #footer .footer1 {
             width: 200px;
-            height: 120px;
-            background-color: #ccc;
+            height: 100px;
+            background-color: #b1b1b1;
         }
 
         #footer .footer2 {
             width: calc(100% - 200px);
-            height: 120px;
-            background-color: #c9c9c9;
-        }
-
-        #footer .footer2 .footer2-1 {
-            width: 100%;
-            height: 60px;
-            background-color: #c9c9c9;
-        }
-
-        #footer .footer2 .footer2-2 {
-            width: 100%;
-            height: 60px;
-            background-color: #b1b1b1;
+            height: 100px;
+            background-color: #a3a3a3;
         }
     </style>
 </head>
@@ -108,21 +92,27 @@
             <h1 class="logo"></h1>
             <nav class="nav"></nav>
         </aside>
+        <!-- //aside -->
         <main id="main">
             <article id="slider">
                 <div class="link"></div>
             </article>
-            <article id="banner"></article>
-            <section id="contents"></section>
+            <!-- //slider -->
+            <article id="banner">
+            </article>
+            <!-- //banner -->
+            <section id="contents">
+            </section>
+            <!-- //contents -->
         </main>
+        <!-- //main -->
         <footer id="footer">
             <div class="footer1"></div>
-            <div class="footer2">
-                <div class="footer2-1"></div>
-                <div class="footer2-2"></div>
-            </div>
+            <div class="footer2"></div>
         </footer>
+        <!-- //footer -->
     </div>
+    <!-- //wrap -->
 </body>
 
 </html>
