--- a/webd/2slide/S1-javascript.html
+++ b/webd/2slide/S1-javascript.html
@@ -86,40 +86,36 @@
       background-color: #9d9d9d;
     }
 
-    .sliderWrap>div {
-      display: none;
-    }
-
-    .sliderWrap>div:first-child {
-      display: block;
-    }
-
     /* slider */
+    #slider {
+      overflow: hidden;
+    }
+
     .sliderWrap {
-      position: relative;
+      display: flex;
     }
 
     .sliderWrap .slider {
-      position: absolute;
-      left: 0;
-      top: 0;
+      position: relative;
     }
 
     .sliderWrap .slider img {
       vertical-align: top;
-      /*이미지여백으로 인한 필수 속성임*/
     }
 
     .sliderWrap .slider span {
       position: absolute;
       left: 50%;
       top: 50%;
-      /*이미지 위에 텍스트를 중앙 정렬하여 표시하기 위해 해당 선택자에 포지션 속성 적용 후  left: 50%; top: 50%;를 적용하면 스팬(텍스트) 요소가 해당 슬라이드의 가운데에 위치 */
       transform: translate(-50%, -50%);
-      /*그 후 transform: translate(-50%, -50%);를 사용하여 스팬(텍스트) 요소의 중앙 정렬을 조정*/
-      background-color: rgba(0, 0, 0, 0.4);
+      background-color: rgba(0, 0, 0, 0.3);
       color: #fff;
       padding: 10px 20px;
+    }
+
+    /* 자바스크립트용 CSS */
+    .sliderWrap>div {
+      display: block;
     }
   </style>
 </head>
@@ -167,15 +163,27 @@
   <!-- //wrap -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script>
-    $(function () {  /*문서를 실행해라*/
-      let currentIndex = 0;  /*let변수에 현재이미지 초기값 설정*/
+    window.onload = function () {
+      let currentIndex = 0;       //현재 이미지
+      const sliderWrap = document.querySelector(".sliderWrap"); //전체 이미지
+      const slider = document.querySelectorAll(".slider");    //각각의 이미지 
+      const sliderClone = sliderWrap.firstElementChild.cloneNode(true);   //첫번째 이미지 저장 
+      sliderWrap.appendChild(sliderClone);    //복사한 이미지를 마지막에 추가
 
-      setInterval(function () {  /*일정하게 반복실행*/
+      setInterval(() => {
+        currentIndex++;     //현재 이미지를 1씩 증가
+        sliderWrap.style.marginLeft = -currentIndex * 100 + "%";    //이미지 이동
+        sliderWrap.style.transition = "all 0.6s";   //이미지 애니메이션 설정
 
-        console.log(currentIndex)
-
+        if (currentIndex == 3) {  //마지막 이미지
+          setTimeout(() => {
+            sliderWrap.style.transition = "0s"; //애니메이션 정지
+            sliderWrap.style.marginLeft = "0";  //이미지 위치 초기화
+            currentIndex = 0;   //현재 이미지 초기화
+          }, 700);
+        }
       }, 3000);
-    });
+    }
   </script>
 </body>
 
