--- a/webd/3.basic/layoutC-1.html
+++ b/webd/3.basic/layoutC-1.html
@@ -18,8 +18,18 @@
 
         #aside {
             width: 20%;
-            height: 650px;
+        }
+
+        #aside .logo {
+            width: 100%;
+            height: 100px;
             background-color: #efefef;
+        }
+
+        #aside .nav {
+            width: 100%;
+            height: 550px;
+            background-color: #e3e3e3;
         }
 
         #main {
@@ -28,24 +38,86 @@
             background-color: #e3e3e3;
         }
 
-        .slider {}
+        #slider {
+            width: 100%;
+            height: 350px;
+            background-color: #e3e3e3;
+        }
 
-        .contents {}
+        #contents {
+            width: 100%;
+            display: flex;
+        }
 
-        .footer {}
+        #contents .content1 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #d9d9d9;
+        }
+
+        #contents .content2 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #d3d3d3;
+        }
+
+        #contents .content3 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #dbdbdb;
+        }
+
+        #footer {
+            width: 100%;
+            display: flex;
+        }
+
+        #footer .footer1 {
+            width: 20%;
+            height: 100px;
+            background-color: #a3a3a3;
+        }
+
+        #footer .footer2 {
+            width: 80%;
+        }
+
+        #footer .footer2 .footer2-1 {
+            width: 100%;
+            height: 50px;
+            background-color: #b9b9b9;
+        }
+
+        #footer .footer2 .footer2-2 {
+            width: 100%;
+            height: 50px;
+            background-color: #b3b3b3;
+        }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <aside id="aside"></aside>
+        <aside id="aside">
+            <h1 class="logo"></h1>
+            <nav class="nav"></nav>
+        </aside>
         <main id="main">
             <article id="slider"></article>
-            <section id="contents"></section>
-            <footer id="footer"></footer>
+            <section id="contents">
+                <div class="content1"></div>
+                <div class="content2"></div>
+                <div class="content3"></div>
+            </section>
+            <footer id="footer">
+                <div class="footer1"></div>
+                <div class="footer2">
+                    <div class="footer2-1"></div>
+                    <div class="footer2-2"></div>
+                </div>
+            </footer>
         </main>
     </div>
-
 </body>
 
 </html>
