--- a/webd/2slide/S-1.html
+++ b/webd/2slide/S-1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>S-3</title>
+  <title>S-2</title>
   <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
   <style>
     * {
@@ -26,42 +26,42 @@
     #header .logo {
       width: 20%;
       height: 100px;
-      background-color: #efefef;
+      background-color: #ddd;
     }
 
     #header .nav {
       width: 80%;
       height: 100px;
-      background-color: #e3e3e3;
+      background-color: #d9d9d9;
     }
 
     #slider {
       width: 100%;
       height: 300px;
-      background-color: #d9d9d9;
+      background-color: #ccc;
     }
 
-    #contents {
+    #main {
       width: 100%;
       display: flex;
     }
 
-    #contents .content1 {
+    #main .content1 {
       width: 33.3333%;
       height: 200px;
-      background-color: #d1d1d1;
+      background-color: #b9b9b9;
     }
 
-    #contents .content2 {
+    #main .content2 {
       width: 33.3333%;
       height: 200px;
-      background-color: #c7c7c7;
+      background-color: #b5b5b5;
     }
 
-    #contents .content3 {
+    #main .content3 {
       width: 33.3333%;
       height: 200px;
-      background-color: #bcbcbc;
+      background-color: #b3b3b3;
     }
 
     #footer {
@@ -72,7 +72,7 @@
     #footer .footer1 {
       width: 20%;
       height: 100px;
-      background-color: #b1b1b1;
+      background-color: #aaa;
     }
 
     #footer .footer2 {
@@ -84,12 +84,18 @@
     #footer .footer3 {
       width: 20%;
       height: 100px;
-      background-color: #9d9d9d;
+      background-color: #a9a9a9;
     }
 
-    /* sliderWrap */
+    /* slider */
     #slider {
       overflow: hidden;
+    }
+
+    .sliderWrap {
+      display: flex;
+      /*이미지 가로정렬*/
+      /* margin-left: -1000px; 웹브라우저에서 움직이는지 체크*/
     }
 
     .sliderWrap .slider {
@@ -105,10 +111,12 @@
       left: 50%;
       top: 50%;
       transform: translate(-50%, -50%);
-      background-color: rgba(0, 0, 0, 0.3);
-      color: #fff;
+      background-color: rgba(0, 0, 0, 0.2);
       padding: 10px 20px;
+      color: #fff;
     }
+
+    /* 자바스크립트 CSS */
   </style>
 </head>
 
@@ -119,7 +127,6 @@
       <nav class="nav"></nav>
     </header>
     <!-- //header -->
-
     <article id="slider">
       <div class="sliderWrap">
         <div class="slider s1">
@@ -137,67 +144,62 @@
       </div>
     </article>
     <!-- //slider -->
-
-    <main id="contents">
+    <main id="main">
       <section class="content1"></section>
       <section class="content2"></section>
       <section class="content3"></section>
     </main>
-    <!-- //contents -->
-
+    <!-- //main -->
     <footer id="footer">
       <div class="footer1"></div>
       <div class="footer2"></div>
       <div class="footer3"></div>
     </footer>
-    <!-- //footer -->
   </div>
   <!-- //wrap -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
   <script>
-    // $(function () {
-    //   let currentIndex = 0;   //현재 이미지 설정
-    //   $(".sliderWrap").append($(".slider").first().clone(true));  //첫번째 이미지를 복사해서 마지막에 추가
+    // $(function () {  //문서가 다 로딩되면 실행해라!
+    //   let currentIndex = 0;  //현재 이미지 초기값 설정
+    //   $(".sliderWrap").append($(".s1").first().clone(true))  //첫번째 이미지 복사 후 마지막에 추가
 
-    //   setInterval(function () {     //3초에 한번씩 실행
-    //     currentIndex++;     //현재 이미지를 1씩 증가
-    //     $(".sliderWrap").animate({ marginTop: -currentIndex * 300 + "px" }, 600);     //이미지 애니메이션
+    //   setInterval(function () {  //일정하게 실행해라!
+    //     currentIndex++;
+    //     $(".sliderWrap").animate({ marginLeft: -currentIndex * 100 + "%" }, 600);  //sliderWrap 애니메이션효과
 
-    //     if (currentIndex == 3) {  //마지막 이미지
-    //       setTimeout(function () {
-    //         $(".sliderWrap").animate({ marginTop: 0 }, 0);   //애니메이션 초기화
-    //         currentIndex = 0;   //현재 이미지를 초기화
-    //       }, 700)
+    //     if (currentIndex == 3) {  //마지막 이미지일 때
+    //       setTimeout(function () {  //한번만 실행해라!
+    //         $(".sliderWrap").animate({ marginLeft: 0 }, 0);  //애니메이션 정지효과
+    //         currentIndex = 0;  //현재이미지 0으로 초기화
+    //       }, 700);
     //     }
     //   }, 3000);
     // });
+    // 이미지 슬라이드 위치변경시 CSS 마진탑 설정하면 됨!
   </script>
   <script>
     window.onload = function () {
-      let currentIndex = 0;   //현재 이미지 설정
-      const sliderWrap = document.querySelector(".sliderWrap");   //전체 이미지
-      const slider = document.querySelectorAll(".slider");    //각각의 이미지
-      const sliderClone = sliderWrap.firstElementChild.cloneNode(true);   //첫번째 이미지를 저장 
-      sliderWrap.appendChild(sliderClone);
+      let currentIndex = 0;
+      const sliderWrap = document.querySelector(".sliderWrap");  //querySelector를 사용하여 클래스가 "sliderWrap"인 요소를 선택, 선택된 요소는 sliderWrap라는 변수에 할당됩니다.
+      const slider = document.querySelectorAll(".slider");  //문서 내에서 클래스가 "slider"인 모든 요소를 선택하는 것입니다. 선택된 모든 요소는 NodeList 형태로 반환되어 slider라는 변수에 할당
+      const sliderClone = sliderWrap.firstElementChild.cloneNode(true);  //첫번째 이미지 저장
+      sliderWrap.appendChild(sliderClone);  //복사한 이미지를 마지막에 추가
 
-      setInterval(() => {     //3초에 한번씩 실행
-        currentIndex++;     //현재 이미지 1씩 증가
-        sliderWrap.style.transition = "all 0.6s";   //애니메이션 추가
-        sliderWrap.style.marginTop = -currentIndex * 300 + "px";    //이미지 이동
+      setInterval(() => {
+        currentIndex++;  //현재이미지 1씩 증가
+        sliderWrap.style.marginLeft = -currentIndex * 100 + "%";
+        sliderWrap.style.transition = "all 0.6s";
 
-        if (currentIndex == slider.length) {  //마지막 이미지
+        if (currentIndex == 3) {  //마지막 이미지일 때
           setTimeout(() => {
-            sliderWrap.style.transition = "0s";     //애니메이션 정지
-            sliderWrap.style.marginTop = "0";       //이미지 위치 초기화
-            currentIndex = 0;   //현재 이미지 초기화
-          }, 700);
+            sliderWrap.style.transition = "0s";  //애니메이션 정지
+            sliderWrap.style.marginLeft = "0";  //이미지 위치 초기화
+            currentIndex = 0;  //현재 이미지 초기화
+          });
         }
       }, 3000);
-    }
-
+    };
   </script>
-
 </body>
 
 </html>
