--- a/effect/parallax06.html
+++ b/effect/parallax06.html
@@ -269,7 +269,16 @@
                         <li><a href="parallax03.html">03</a></li>
                         <li><a href="parallax04.html">04</a></li>
                         <li><a href="parallax05.html">05</a></li>
-                        <li class="active"><a href="parallax06.html">06</a></li>
+                        <li class="active"><a href="parallax06.html">06</a></li>                        
+                        <li><a href="parallax07.html">7</a></li>
+                        <li><a href="parallax08.html">8</a></li>
+                        <li><a href="parallax09.html">9</a></li>
+                        <li><a href="parallax10.html">10</a></li>
+                        <li><a href="parallax11.html">11</a></li>
+                        <li><a href="parallax12.html">12</a></li>
+                        <li><a href="parallax13.html">13</a></li>
+                        <li><a href="parallax14.html">14</a></li>
+                        <li><a href="parallax15.html">15</a></li>
                     </ul>
                 </nav>
             </div>
