--- a/webd/site/siteA/index.html
+++ b/webd/site/siteA/index.html
@@ -96,9 +96,9 @@
           </div>
           <div class="gallery">
             <ul>
-              <li><a href=""><img src="images/Rectangle 57.jpg" alt="독일 천문대"></a></li>
-              <li><a href=""><img src="images/Rectangle 58.jpg" alt="미국 천문대"></a></li>
-              <li><a href=""><img src="images/Rectangle 59.jpg" alt="영국 천문대"></a></li>
+              <li><a href="#"><img src="images/Rectangle 57.jpg" alt="독일 천문대"></a></li>
+              <li><a href="#"><img src="images/Rectangle 58.jpg" alt="미국 천문대"></a></li>
+              <li><a href="#"><img src="images/Rectangle 59.jpg" alt="영국 천문대"></a></li>
             </ul>
           </div>
         </div>
@@ -110,17 +110,29 @@
       </section>
       <!-- //banner -->
       <section class="link">
-
+        <h3>이달의 별자리 구경하기</h3>
+        <a href="#">바로가기</a>
       </section>
       <!-- //link -->
     </main>
     <!-- //main -->
 
     <footer id="footer">
-      <div class="footer1"></div>
+      <div class="footer1">
+        <h4>강원천문대</h4>
+      </div>
       <div class="footer2">
-        <div class="footer2-1"></div>
-        <div class="footer2-2"></div>
+        <div class="footer2-1">
+          <ul>
+            <li><a href="#">개인정보처리방침</a></li>
+            <li><a href="#">저작권보호정책</a></li>
+            <li><a href="#">이메일무단수집거부</a></li>
+            <li><a href="#">CCTV설치 및 운영지침</a></li>
+          </ul>
+        </div>
+        <div class="footer2-2">
+          COPYRIGHT 2024, All Rights Reseved
+        </div>
       </div>
     </footer>
     <footer id="footer">
